Added dao